syntax = "proto3";

package runmresource;

import "capability.proto";
import "distance.proto";
import "filter.proto";

// A collection of related providers
message ProviderGroup {
    string uuid = 1;
    string name = 2;
    uint32 generation = 100;
}

// Represents the relative distance between a provider and a provider group
message ProviderDistance {
    ProviderGroup provider_group = 1;
    Distance distance = 2;
}

// A provider exposes inventory of resources to be claimed by consumers of
// those resources. Each provider may belong to zero or more provider groups
// and have capabilities associated with it.
message Provider {
    string partition = 1;
    string provider_type = 2;
    string uuid = 3;
    Provider parent = 51;
    Provider root = 52;
    repeated ProviderGroup groups = 53;
    repeated Capability capabilities = 54;
    repeated ProviderDistance distances = 55;
    uint32 generation = 100;
}

// Used in matching provider records
message ProviderFilter {
    UuidFilter uuid_filter = 1;
    UuidFilter partition_filter = 2;
    CodeFilter provider_type_filter = 3;
}
